--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,24 +1,53 @@
-@import url('https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700&display=swap");
 /* App.css */
 .animated-header {
-    opacity: 0;
-    transform: translateY(-20px);
-    transition: opacity 1s ease, transform 1s ease;
-  }
-  /* App.css */
+  opacity: 0;
+  transform: translateY(-20px);
+  transition: opacity 1s ease, transform 1s ease;
+}
+/* App.css */
 
 .video-transition {
   transition: opacity 3s ease;
 }
-  
-  /* HomePage.css */
-  @keyframes moveAndRotate {
-    0% {
-      opacity: 0;
-      transform: translateY(20px) rotate(-90deg);
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0) rotate(0);
-    }
+
+/* HomePage.css */
+@keyframes moveAndRotate {
+  0% {
+    opacity: 0;
+    transform: translateY(20px) rotate(-90deg);
   }
+  100% {
+    opacity: 1;
+    transform: translateY(0) rotate(0);
+  }
+}
+/* Update the CSS for the blog post container */
+
+
+
+
+.header {
+  background-image: url("/Users/kukusha/Desktop/spa-website/frontend/src/images/greenBG.jpeg");
+  background-size: cover;
+  background-position: center;
+  margin-top: 0px;
+  padding: 2.5rem;
+  text-align: center;
+  animation: fadeIn 1s ease;
+}
+
+.header h1 {
+  font-size: 4rem; /* Adjust font size as needed */
+  font-family: "Arial", sans-serif; /* Change font family to your desired font */
+  color: #ffffff; /* Change font color as needed */
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
